--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@ rio<!DOCTYPE html>
 <body>
     <div class="container">
         <header class="main-info">
-            <h1>[Gregorio Olivares]</h1>
-            <h1>Preferred Name: [Greg]</h1>
+            <h1>Gregorio Olivares</h1>
+            <h1>Preferred Name: Greg</h1>
         </header>
 
         <section class="lewis">
-			<h2>Year at Lewis: [4 years at Lewis]</h2>
+			<h2>Year at Lewis: 4</h2>
 			<h2>Lewis major/minor/concentrations: [Computer Science Major/Concentration in Networking]</h2>
 			<h2>Reasons for pursuing this degree: [Your reasons for pursuing the degree]</h2>
         </section>
