--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <section class="lewis">
 			<h2>Year at Lewis: 4</h2>
-			<h2>Lewis major/minor/concentrations: [Computer Science Major/Concentration in Networking]</h2>
+			<h2>Lewis major/minor/concentrations: Computer Science Major/Concentration in Networking</h2>
 			<h2>Reasons for pursuing this degree: [Your reasons for pursuing the degree]</h2>
         </section>
 
