trying to add picture

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>About Me</title>
-    <style>
+    <img src = "C:\Users\groli\OneDrive\Pictures\me-800-by-800.jpg" alt="me-800-by-800" width="800px" height="800px">   
+     <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
