--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         <a></a>
         <!-- This will be the main header -->
         <h1>Greg Olivares</h1>
-        <a href = "C:\Users\groli\OneDrive\Pictures\me-800-by-800.jpg" target="_blank">
-            <img src = "C:\Users\groli\OneDrive\Pictures\me-800-by-800.jpg" alt="me-800-by-800" width="300px" height="300px"></a>
+        <a href = "me-800-by-800.jpg" target="_blank">
+            <img src = "me-800-by-800.jpg" alt="me-800-by-800" width="300px" height="300px"></a>
 	    <h1>Student Email: <a href="malito:">gregoriodolivares@lewisu.edu </a></h1>
 	     <h1>Discord: @Golivares. </h1>     
     </header>
