--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
     p {font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;}
 	div {text-align: center;}
     li {text-align: center;}
-    ul {text-align: center;}
-    ul {list-style-position:initial;}
+    ul {text-align: left;}
+    ul {list-style-position: inside;}
+    ul {display: inline-block;}
+    ul {padding:0;}
     section.solid {border-style: solid;}
 	body.solid {border-style: solid;}
     
