--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             width: 80%;
             margin: auto;
             overflow: hidden;
+	    text-align:center
         }
         .main-info {
             background: #ffffff;
