--- a/index.html
+++ b/index.html
@@ -41,11 +41,15 @@
     h2 {text-align: center;}
     h2 {font-style: italic;}
     h2 {font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;}
-	p {text-align: center;}
+    p {text-align: center;}
+    p {display:inline;} 
     p {font-style: italic;}
+    p {margin:0;}
     p {font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;}
-	div {text-align: center;}
+    div {text-align: center;}
     li {text-align: center;}
+    li {display:inline;}
+    li {margin:0;}
     ul {text-align: left;}
     ul {list-style-position: inside;}
     ul {display: inline-block;}
