--- a/index.html
+++ b/index.html
@@ -109,13 +109,11 @@
         <section class="hobbies">
             <div class="container">
             <h2>My Favorite Hobby/ Activity </h2>
-            <ul class="myUL" style="list-style-position: inside;">
-                <ul style="list-style-type: square">
+            <ul class="myUL" style="list-style-type: square;list-style-position: inside;">
                     <li><p>Going to the Gym <a href="https://medlineplus.gov/benefitsofexercise.html" target="_blank">(Why working out is important).</a> </li></p>
                     <li><p>Hanging out with my friends.</li</p>
                     <li><p>Playing piano <a href="https://www.youtube.com/watch?v=Bi4hwFZ3FOo" >(Currently learning this).</a> </li></p>
                     <li><p>Driving my car around town.</p></li>
-                </ul>
             </ul>
             </div>
         </section>
