--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
             width: 80%;
             margin: auto;
             overflow: hidden;
-	    text-align:center
         }
         .main-info {
             background: #ffffff;
@@ -41,19 +40,13 @@
     h2 {text-align: center;}
     h2 {font-style: italic;}
     h2 {font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;}
-    p {text-align: center;}
-    p {display:inline;} 
+	p {text-align: center;}
     p {font-style: italic;}
-    p {margin:0;}
     p {font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;}
-    div {text-align: center;}
+	div {text-align: center;}
     li {text-align: center;}
-    li {display:inline;}
-    li {margin:0;}
-    ul {text-align: left;}
-    ul {list-style-position: inside;}
-    ul {display: inline-block;}
-    ul {padding:0;}
+    ul {text-align: center;}
+    ul {list-style-position:initial;}
     section.solid {border-style: solid;}
 	body.solid {border-style: solid;}
     
@@ -65,8 +58,8 @@
         <a></a>
         <!-- This will be the main header -->
         <h1>Greg Olivares</h1>
-        <a href = "me-800-by-800.jpg" target="_blank">
-            <img src = "me-800-by-800.jpg" alt="me-800-by-800" width="300px" height="300px"></a>
+        <a href = "C:\Users\groli\OneDrive\Pictures\me-800-by-800.jpg" target="_blank">
+            <img src = "C:\Users\groli\OneDrive\Pictures\me-800-by-800.jpg" alt="me-800-by-800" width="300px" height="300px"></a>
 	    <h1>Student Email: <a href="malito:">gregoriodolivares@lewisu.edu </a></h1>
 	     <h1>Discord: @Golivares. </h1>     
     </header>
@@ -109,11 +102,13 @@
         <section class="hobbies">
             <div class="container">
             <h2>My Favorite Hobby/ Activity </h2>
-            <ul class="myUL" style="list-style-type: square;list-style-position: inside;">
+            <ul class="myUL" style="list-style-position: inside;">
+                <ul style="list-style-type: square">
                     <li><p>Going to the Gym <a href="https://medlineplus.gov/benefitsofexercise.html" target="_blank">(Why working out is important).</a> </li></p>
                     <li><p>Hanging out with my friends.</li</p>
                     <li><p>Playing piano <a href="https://www.youtube.com/watch?v=Bi4hwFZ3FOo" >(Currently learning this).</a> </li></p>
                     <li><p>Driving my car around town.</p></li>
+                </ul>
             </ul>
             </div>
         </section>
@@ -125,5 +120,4 @@
         </section>
     </div>
 </body>
-	<p>Last Updated: 2025-02-02</p>
 </html>
